syntax = "proto3";

package helloworld;

option go_package = "example;main";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloStream (HelloStreamRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message HelloStreamRequest {
    string name = 1;
    int64 count = 2;
}
